...
            </View>
        );
    }

    return (
        <View style={styles.container}>
            <Text style={styles.pageTitle}>Tüm Notları Keşfet</Text>
            
            <TextInput
                style={styles.searchInput}
                placeholder="Başlık, Ders Adı veya Kullanıcı Adı Ara..."
                value={searchText}
                onChangeText={setSearchText}
...
